# ckanext-menu

./: .gitignore  404.html  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml  test.ini
.github/workflows/: test.yml
ckanext/menu/: helpers.py  plugin.py  types.py  utils.py
ckanext/menu/assets/: script.js  webassets.yml
ckanext/menu/assets/css/: styles.css
ckanext/menu/assets/js/: menu-sortable-menu-items.js
ckanext/menu/logic/: action.py  auth.py  schema.py  validators.py
ckanext/menu/migration/menu/: alembic.ini
ckanext/menu/migration/menu/versions/: 94a7d1b465b2_add_attributes_column.py  bf99daca3cec_add_translations_column.py  d518c0346cda_add_menu_and_menuitem_tables.py
ckanext/menu/model/: menu.py
ckanext/menu/templates/: header.html
ckanext/menu/templates/menu/: create.html  delete.html  edit.html  list.html  page.html  read.html
ckanext/menu/templates/menu/macros/: menu.html
ckanext/menu/templates/menu/menu_item/: create.html  delete.html  edit.html  list.html
ckanext/menu/templates/menu/menu_item/translations/: create.html  delete.html  edit.html  list.html
ckanext/menu/templates/menu/snippets/: footer_menu.html  main_nav_dropdown_menu.html  main_nav_menu.html  menu_collapse.html  menu_list.html
ckanext/menu/tests/: test_plugin.py
ckanext/menu/views/: __init__.py  menu.py  menu_item.py  menu_item_translations.py
docs/: index.md  installation.md  usage.md
installation/: index.html
search/: search_index.json
usage/: index.html
