[project]
name = "ckanext-menu"
version = "0.0.1"
description = ""
readme = "README.md"
authors = [
    {name = ""}
]
license = {text = "AGPL"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

keywords = [ "CKAN", "menu,", "link,", "navigation", ]
dependencies = []

[project.urls]
Homepage = "https://github.com/Datashades/ckanext-menu"

[project.entry-points."ckan.plugins"]
menu = "ckanext.menu.plugin:MenuPlugin"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
        "ignore::sqlalchemy.exc.SADeprecationWarning",
        "ignore::sqlalchemy.exc.SAWarning",
        "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"
